@@ -81,6 +81,9 @@ val system: system
 val masm: bool
 val windows:bool
 
+(** Whether calls need to go via the PLT. *)
+val use_plt : bool
+
 (** Support for plumbing a binary code emitter *)
 
 val register_internal_assembler: (asm_program -> string -> unit) -> unit
